--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "express-session": "^1.19.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
